# census_processing

./: .env.example  .gitignore  main.ipynb  pyproject.toml  test.ipynb
census_processing/: definitions.py
census_processing/defs/: managers.py
census_processing/defs/assets/: common.py  data_1990.py  data_2000.py  geometry.py  merged.py
census_processing/defs/assets/census/: census_1990.py  census_2000.py  common.py
census_processing/defs/assets/geometry/: geometry_1990.py  geometry_2000.py
docker/: db_compose.yml
