[project]
name = "census-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cabarchive>=0.2.4",
    "contextily>=1.6.2",
    "dagster>=1.12.0",
    "dagster-dg-cli>=1.12.0",
    "dagster-webserver>=1.12.0",
    "fiona>=1.10.1",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "rarfile>=4.2",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "PLR2004"]

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "census_processing"
registry_modules = [
    "census_processing.assets.*",
    "census_processing.managers"
]
